5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4182/executions/1594_2425.log
== SUBMITION (2019-04-02 15:34:17) 
-- CODE:
d= float(input())
cg= float(input())
total=d/cg
print(round(total,3 kml/l))
-- EXECUTION TIME:
0.145624
-- ERROR:
  File "/home/codebench/codes/1594/2425/main.py", line 4
    print(round(total,3 kml/l))
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:34:45) 
-- CODE:
d= float(input())
cg= float(input())
total=d/cg
print(round(total,3 "km/l"))
-- EXECUTION TIME:
0.138925
-- ERROR:
  File "/home/codebench/codes/1594/2425/main.py", line 4
    print(round(total,3 "km/l"))
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:34:49) 
-- CODE:
d= float(input())
cg= float(input())
total=d/cg
print(round(total,3 "km/l"))
-- EXECUTION TIME:
0.200648
-- ERROR:
  File "/home/codebench/codes/1594/2425/main.py", line 4
    print(round(total,3 "km/l"))
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:35:19) 
-- CODE:
d= float(input())
cg= float(input())
total=d/cg
print(round(total,3 "km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(total,3 "km/l"))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:35:45) 
-- CODE:
d= float(input())
cg= float(input())
total=d/cg
print(round(total "km/l",3))
-- EXECUTION TIME:
0.140746
-- ERROR:
  File "/home/codebench/codes/1594/2425/main.py", line 4
    print(round(total "km/l",3))
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:35:48) 
-- CODE:
d= float(input())
cg= float(input())
total=d/cg
print(round(total "km/l",3))
-- ERROR:
File "XXXX", line 4
    print(round(total "km/l",3))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:36:13) 
-- CODE:
d= float(input())
cg= float(input())
total=d/cg
print(round(total,3)"km/l")
-- EXECUTION TIME:
0.137621
-- ERROR:
  File "/home/codebench/codes/1594/2425/main.py", line 4
    print(round(total,3)"km/l")
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:36:27) 
-- CODE:
d= float(input())
cg= float(input())
total=d/cg
print(round(total,3)"km/l")
-- ERROR:
File "XXXX", line 4
    print(round(total,3)"km/l")
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:36:39) 
-- CODE:
d = float(input())
cg = float(input())
total = d/cg
print(round(total,3)"km/l")
-- EXECUTION TIME:
0.265702
-- ERROR:
  File "/home/codebench/codes/1594/2425/main.py", line 4
    print(round(total,3)"km/l")
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:36:47) 
-- CODE:
d = float(input())
cg = float(input())
total = d/cg
print(round(total,3),"km/l")
-- EXECUTION TIME:
0.175388
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
